--- a/src/App.css
+++ b/src/App.css
@@ -95,6 +95,7 @@ button{
     border-radius: 50%;
     color: white; 
     cursor: pointer;
+    text-wrap: nowrap;
     margin-right: 2rem;
     background-color: var(--button-color);
     background-color: #ff0783;
