--- a/src/App.css
+++ b/src/App.css
@@ -186,7 +186,7 @@ input[type="text"]{
 footer{
     font-size: 1.2rem;
     bottom: 2rem;
-    width: 15rem;
+    width: fit-content;
     margin: 5rem auto;
 }
 
