--- a/src/App.css
+++ b/src/App.css
@@ -3,222 +3,202 @@
 
 /* Common styles */
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video{
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font: inherit;
-    vertical-align: baseline;
-}
-  
-html{
-    font-size: 62.5%;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font: inherit;
+  vertical-align: baseline;
 }
 
 body{
-    font-family: "Days One", sans-serif;
-    font-weight: 400;
-    font-size: 1.7rem;
-    font-display: swap;
-    color: #e4e4e4;
-    background-color: #14162a;
+  font-family: "Days One", sans-serif;
+  font-weight: 400;
+  font-display: swap;
+  color: #e4e4e4;
+  background-color: #14162a;
 }
 
 h1{
-    font-size: 3rem;
+  font-size: 3rem;
 }
 
 h2{
-    font-size: 6.5rem;
-    letter-spacing: 0.4rem;
-    margin-bottom: 1rem;
-    background: -webkit-linear-gradient(#00DA8B, #476FFF);
-    background-clip: text;
-    -webkit-text-fill-color: transparent;
-}
-
-h3{
-    font-size: 4rem;
-    letter-spacing: 0.3rem;
-    font-weight: 400;
-    line-height: 4rem;
-    color:#62a2fb;
-    margin-top: 2.5rem;
+  font-size: 68px;
+  letter-spacing: 1px;
+  margin-bottom: 16px;
+  background: -webkit-linear-gradient(#00DA8B, #476FFF);
+  background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 p{
-    white-space: pre-line;
-    font-family: "Outfit", sans-serif;
-    font-optical-sizing: auto;
-    font-weight: 300;
-    font-style: normal;
-    font-size: 2rem;
+  white-space: pre-line;
+  font-family: "Outfit", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 300;
+  font-style: normal;
+  font-size: 20px;
 }
 
 a{
-    text-decoration: none;
-    color: inherit;
+  text-decoration: none;
+  color: inherit;
 }
 
 ul{
-    list-style-type: none;
+  list-style-type: none;
 }
 
 li{
-    display: inline-block;
+  display: inline-block;
 }
 
 .container{
-    max-width: 800px; 
-    margin-right: auto; 
-    margin-left:  auto;
-    padding-right: 2rem; 
-    padding-left:  2rem;
-    padding-top:  3rem;
+  max-width: 800px; 
+  margin: 0 auto;
+  padding: 30px 16px 0 16px;
 }
 
 /* Header */
 header{
-    margin-bottom: 4rem;;
+  margin-bottom: 50px;
 }
 
 header > a > img{
-    display: block;
-    width: 100%;
-    margin: 0 auto;
+  display: block;
+  width: 100%;
+  margin: 0 auto;
 }
 
 button{
-    display: inline-block;
-    width: 4rem;
-    height: 4rem;
-    border: none;
-    border-radius: 50%;
-    color: white; 
-    cursor: pointer;
-    text-wrap: nowrap;
-    margin-right: 2rem;
-    background-color: var(--button-color);
-    background-color: #ff0783;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  width: 44px;
+  height: 44px;
+  border: none;
+  border-radius: 50%;
+  color: white; 
+  font-size: 16px;
+  cursor: pointer;
+  text-wrap: nowrap;
+  background-color: var(--button-color);
+  background-color: #ff0783;
 }
   
-button img{
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 2rem;
-    height: 2rem;
-    margin: 0 auto;
-}
-
 button:hover{
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 /* Form */
 form{
-    margin: 3rem 0;
+  margin: 40px 0;
 }
 
 input[type="text"]{
-    background-color: transparent;
-    border: 0;
-    border-bottom: solid 0.2rem #ff0783;
-    width: 80%;
-    height: 2rem;
-    color: #727272;
-    font-weight: lighter;
-    font-size: 2rem;
-    margin-right: 1rem;
+  background-color: transparent;
+  border: 0;
+  border-bottom: solid 2px #ff0783;
+  width: 80%;
+  color: #727272;
+  font-weight: lighter;
+  font-size: 20px;
+  margin-right: 14px;
+  padding: 3px 0 3px 8px;
 }
 
 *:focus{
-    outline: none;
+  outline: none;
 }
 
 /* recipe */
 .recipe{
-    margin-top: 1.5rem;
-    padding-bottom: 7rem;;
+  padding-bottom: 20px;
 }
 
 .recipe h2, p:nth-child(2), p:nth-child(3){
-    text-align: center;
+  text-align: center;
 }
 
 .recipe span{
-    background-color: #ffb947;
-    color: #fff;
-    margin-left: 0.8rem;
-    padding: 0.1rem 1.2rem;
-    border-radius: 1rem;
+  background-color: #ffb947;
+  color: #fff;
+  margin-left: 10px;
+  padding: 1px 14px;
+  border-radius: 10px;
 }
 
 .recipe img{
-    display: block;
-    width: 40rem;
-    border-radius: 15%;
-    margin: 2rem auto;
-    background: linear-gradient(white, white) padding-box,
-                linear-gradient(270deg, rgb(255, 167, 167) 30%, rgb(169, 255, 246) 120%);
-    border: 0.3rem solid transparent;
+  display: block;
+  width: 400px;
+  border-radius: 15%;
+  margin: 24px auto 50px;
+  background: linear-gradient(white, white) padding-box,
+              linear-gradient(270deg, rgb(255, 167, 167) 30%, rgb(169, 255, 246) 120%);
+  border: 4px solid transparent;
 }
 
 .recipe p:last-child{
-    margin-top: 2rem;
-    white-space: normal;
+  margin-top: 60px;
+  white-space: normal;
 }
 
 .recipe p:last-child span{
-    background-color: rgb(94, 161, 255);
-    margin-top: 2rem;
-    padding: 0.1rem 1.5rem;
+  background-color: rgb(94, 161, 255);
+  padding: 1px 18px;
 }
 
 .recipe p:last-child a{
-    word-wrap: break-word;
+  word-wrap: break-word;
 }
 
 .recipe p:last-child span:hover{
-    opacity: 0.8;
+  opacity: 0.8;
 }
 
 /* Footer */
 footer{
-    font-size: 1.2rem;
-    bottom: 2rem;
-    width: fit-content;
-    margin: 5rem auto;
+  font-size: 15px;
+  width: fit-content;
+  margin: 70px auto;
 }
 
 /* Loading */
 .loading{
-    border: 0.6rem solid #ff0783;
-    border-top: 0.4rem solid #07ffff;
-    border-radius: 50%;
-    width: 6rem;
-    height: 6rem;
-    margin: 3rem auto 0;
-    animation: spin 2s linear infinite;
+  border: 6px solid #ff0783;
+  border-top: 6px solid #07ffff;
+  border-radius: 50%;
+  width: 80px;
+  height: 80px;
+  margin: 40px auto 0;
+  animation: spin 2s linear infinite;
 }
 
 @keyframes spin{
-    0%{ transform: rotate(0deg);}
-    100%{ transform: rotate(360deg);}
+  0%{ transform: rotate(0deg);}
+  100%{ transform: rotate(360deg);}
 }
 
 /* Responsive */
 @media only screen and (max-width: 500px) {
-    h2{
-        font-size: 3.5rem;
-    }
-    input[type="text"]{
-        width: 70%;
-    }
-    ul > * >  img{
-        width: 4.5rem;
-        border: 0.1rem solid transparent;
-    }
-    .recipe img{
-        width: 25rem;
-    }
+  h2{
+    font-size: 44px;
+  }
+  input[type="text"]{
+    width: 70%;
+  }
+  ul > * >  img{
+    border: 3px solid transparent;
+  }
+  .recipe img{
+    width: 260px;
+  }
+
+  .recipe p:last-child {
+    margin-top: 40px;
+  }
+
+  footer {
+    margin: 40px auto;
+  }
 }
